--- a/bg-changer/src/App.css
+++ b/bg-changer/src/App.css
@@ -18,7 +18,7 @@
   display: flex;
   justify-content: center; /* Ensure buttons have space between them */
   align-items: center;
-  padding: 10px 10px; /* Add vertical padding for spacing */
+  padding: 10px 10px; /* Add vertical and Horizontal padding for spacing */
   background-color: #ffffff;
   border-radius: 15px;
   margin-bottom: 10px;
@@ -40,4 +40,5 @@
 
 .multi-btn button:hover {
   background-color: #e0e0e0; /* Add hover effect */
+  box-shadow: 0 0 0 2px #0066ff;
 }
